Got the fisher-yates scrambler in

--- a/base.html
+++ b/base.html
@@ -12,12 +12,12 @@
 
   <form>
   Querent: <input type="text" id="querent">
-    <div class = "button">
-      <button name="grabquerent" value="button" onClick="grabquerent()"/>
-    </div>
-
+    <input type="submit" onClick="return_response()">
   </form>
 
+  <div>
+    Dynamic response here
+  </div>
   </body>
   <script src="script.js">
   </script>
